<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_overlay"
    tools:context="chatme.apps.madnan.chatme.ui.UserProfile">

    <ImageView
        android:id="@+id/userProfileIMG"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:src="@drawable/profile_avatar"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/UserProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userProfileIMG"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/username"
        android:textColor="#FFFF"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/UserProfileStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/UserProfileName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/current_user_status"
        android:textColor="#FFFF" />



    <Button
        android:id="@+id/UserProfileSendRequest"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/DeclineRequest"
        android:layout_marginBottom="16dp"
        android:background="@drawable/prof_btn"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/send_request"
        android:textColor="#FFFF" />

    <TextView
        android:id="@+id/UserProfileFriendsCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/UserProfileSendRequest"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/total_friends"
        android:textColor="#FFFF" />
    <Button
        android:id="@+id/DeclineRequest"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="@drawable/prof_btn"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/decline_friend_request"
        android:textColor="#FFFF" />
</RelativeLayout>
