<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context="chatme.apps.madnan.chatme.ui.Login">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ToolbarStyle"
        app:titleMarginStart="24dp"
        app:titleTextColor="@android:color/white">
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            tools:ignore="ScrollViewSize,UselessLeaf">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_gravity="center_horizontal"
                    app:srcCompat="@drawable/chat_me"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/signIn_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="#FFFF"

                    >

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:backgroundTint="#FFFF"
                        android:drawableLeft="@drawable/ic_person"
                        android:drawablePadding="8dp"
                        android:drawableStart="@drawable/ic_person"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColor="#FFFF"
                        android:textColorHint="#FFFF"
                        android:textColorLink="@android:color/background_light"
                        android:textSize="16sp"
                        tools:ignore="HardcodedText,RtlHardcoded,UnusedAttribute" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/signIn_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColorHint="#FFFF">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:backgroundTint="#FFFF"
                        android:drawableLeft="@drawable/ic_lock"
                        android:drawablePadding="8dp"
                        android:drawableStart="@drawable/ic_lock"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="#FFFF"
                        android:textColorHint="#FFFF"
                        android:textSize="16sp"
                        tools:ignore="HardcodedText,RtlHardcoded,UnusedAttribute" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:paddingBottom="30dp"
                android:paddingEnd="30dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingStart="30dp"
                android:paddingTop="30dp">

                <Button
                    android:id="@+id/signIn_button"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/round_btn"
                    android:text="@string/Signin"
                    android:textColor="#E2001A"
                    android:textSize="16sp"
                    tools:ignore="HardcodedText,UnusedAttribute" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/forget_your_password"
                    android:textColor="#FFFF"
                    android:textSize="16sp"
                    android:onClick="forgetPass"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
