<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    tools:context="chatme.apps.madnan.chatme.ui.Profile">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#EEEEEE"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="#EEEEEE">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/prof_cover"
                    tools:ignore="ContentDescription" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_userIV"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:src="@drawable/profile"
                    app:civ_border_color="#cccccc"
                    android:onClick="choosePhoto"
                    app:civ_border_width="2dp" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#EEEEEE"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profile_usernameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/username"
                    android:textColor="#000"
                    android:gravity="center"
                    android:textSize="22dp"
                    tools:ignore="HardcodedText,SpUsage" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:id="@+id/profile_statusTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        android:layout_centerHorizontal="true"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:padding="5dp"
                        tools:ignore="HardcodedText" />

                    <ImageView
                        android:id="@+id/profile_edit_statusIV"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="3dp"
                        android:onClick="EditStatus"
                        android:layout_toRightOf="@id/profile_statusTV"
                        android:background="@drawable/edit_btn"
                        tools:ignore="ContentDescription,RtlHardcoded" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#EEEEEE"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/mobile"
                        tools:ignore="ContentDescription,RtlHardcoded" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/mobile"
                        android:textSize="14dp"
                        tools:ignore="HardcodedText,RtlHardcoded,SpUsage" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:id="@+id/profile_phoneTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:padding="5dp"
                        android:text="000-000-000"
                        android:textColor="#000"
                        android:textSize="16dp"
                        tools:ignore="HardcodedText,RtlHardcoded,SpUsage" />

                    <ImageView
                        android:id="@+id/profile_edit_mobileIV"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@id/profile_phoneTV"
                        android:onClick="EditPhone"
                        android:background="@drawable/edit_btn"
                        tools:ignore="ContentDescription,RtlHardcoded" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="5dp"
                    android:background="#ACACAC"
                    tools:ignore="RtlHardcoded" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/email"
                        tools:ignore="ContentDescription,RtlHardcoded" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/email"
                        android:textSize="14dp"
                        tools:ignore="HardcodedText,RtlHardcoded,SpUsage" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:id="@+id/profile_emailTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:padding="5dp"
                        android:text="test@example.com"
                        android:textColor="#000"
                        android:textSize="16dp"
                        tools:ignore="HardcodedText,RtlHardcoded,SpUsage" />

                    <ImageView
                        android:id="@+id/profile_edit_emailIV"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@id/profile_emailTV"
                        android:background="@drawable/edit_btn"
                        android:onClick="EditEmail"
                        tools:ignore="ContentDescription,RtlHardcoded" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="5dp"
                    android:background="#ACACAC"
                    tools:ignore="RtlHardcoded" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/ic_location"
                        tools:ignore="ContentDescription,RtlHardcoded" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/address"
                        android:textSize="14dp"
                        tools:ignore="HardcodedText,RtlHardcoded,SpUsage" />

                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:id="@+id/profile_AddressTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:padding="5dp"
                        android:text="Country-City"
                        android:textColor="#000"
                        android:textSize="16dp"
                        tools:ignore="HardcodedText,RtlHardcoded,SpUsage" />

                    <ImageView
                        android:id="@+id/profile_edit_AddressIV"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginLeft="5dp"
                        android:layout_toRightOf="@id/profile_AddressTV"
                        android:background="@drawable/edit_btn"
                        android:onClick="EditAddress"
                        tools:ignore="ContentDescription,RtlHardcoded" />
                </RelativeLayout>



            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
